--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,16 +3,18 @@ pipeline{
   stages{
     stage('Git Checkout'){
       steps{
-      
+      git branch: 'main', url: 'https://github.com/JevitaD/pipeline'
       }
     }
     stage('Build'){
       steps{
-    
+        sh 'cd /home/ubuntu/jenkins/workspace/pipeline2'
+        sh 'mvn clean install'
       }
     }
     stage('Deploy'){
       step{
+      sh 'sudo cp /home/ubuntu/jenkins/workspace/pipeline2/target/*.war /opt/apache-tomcat-9.0.55/webapps'
       
       }
     }
