--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline{
       }
     }
     stage('Deploy'){
-      step{
+      steps{
       sh 'sudo cp /home/ubuntu/jenkins/workspace/pipeline2/target/*.war /opt/apache-tomcat-9.0.55/webapps'
       
       }
